--- a/person_counter.ipynb
+++ b/person_counter.ipynb
@@ -109,17 +109,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../obj_det/utils/visualization_utils.py:25: UserWarning: \n",
+      "This call to matplotlib.use() has no effect because the backend has already\n",
+      "been chosen; matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "The backend was *originally* set to 'module://ipykernel.pylab.backend_inline' by the following code:\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/runpy.py\", line 174, in _run_module_as_main\n",
+      "    \"__main__\", fname, loader, pkg_name)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/runpy.py\", line 72, in _run_code\n",
+      "    exec code in run_globals\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/traitlets/config/application.py\", line 658, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelapp.py\", line 486, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/ioloop.py\", line 1008, in start\n",
+      "    self._run_callback(self._callbacks.popleft())\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/ioloop.py\", line 759, in _run_callback\n",
+      "    ret = callback()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 536, in <lambda>\n",
+      "    self.io_loop.add_callback(lambda : self._handle_events(self.socket, 0))\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 450, in _handle_events\n",
+      "    self._handle_recv()\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 480, in _handle_recv\n",
+      "    self._run_callback(callback, msg)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 432, in _run_callback\n",
+      "    callback(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 283, in dispatcher\n",
+      "    return self.dispatch_shell(stream, msg)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 233, in dispatch_shell\n",
+      "    handler(stream, idents, msg)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 399, in execute_request\n",
+      "    user_expressions, allow_stdin)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/ipkernel.py\", line 208, in do_execute\n",
+      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/zmqshell.py\", line 537, in run_cell\n",
+      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2714, in run_cell\n",
+      "    interactivity=interactivity, compiler=compiler, result=result)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2824, in run_ast_nodes\n",
+      "    if self.run_code(code, result):\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2878, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-10-48fe9407af3a>\", line 2, in <module>\n",
+      "    get_ipython().magic(u'matplotlib inline')\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2160, in magic\n",
+      "    return self.run_line_magic(magic_name, magic_arg_s)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2081, in run_line_magic\n",
+      "    result = fn(*args,**kwargs)\n",
+      "  File \"<decorator-gen-105>\", line 2, in matplotlib\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/magic.py\", line 188, in <lambda>\n",
+      "    call = lambda f, *a, **k: f(*a, **k)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/magics/pylab.py\", line 100, in matplotlib\n",
+      "    gui, backend = self.shell.enable_matplotlib(args.gui)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2966, in enable_matplotlib\n",
+      "    pt.activate_matplotlib(backend)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/pylabtools.py\", line 315, in activate_matplotlib\n",
+      "    matplotlib.pyplot.switch_backend(backend)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/pyplot.py\", line 231, in switch_backend\n",
+      "    matplotlib.use(newbackend, warn=False, force=True)\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/__init__.py\", line 1410, in use\n",
+      "    reload(sys.modules['matplotlib.backends'])\n",
+      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/backends/__init__.py\", line 16, in <module>\n",
+      "    line for line in traceback.format_stack()\n",
+      "\n",
+      "\n",
+      "  import matplotlib; matplotlib.use('Agg')  # pylint: disable=multiple-statements\n"
+     ]
+    }
+   ],
    "source": [
     "sys.path.append(\"../obj_det/\")\n",
     "from utils import label_map_util\n",
-    "#from utils import visualization_utils as vis_util\n",
+    "from utils import visualization_utils as vis_util\n",
     "from utils import object_detection_evaluation as od_eval"
    ]
   },
@@ -237,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +325,7 @@
        "{'id': 1, 'name': u'person'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -331,7 +410,7 @@
    },
    "outputs": [],
    "source": [
-    "PATH_TO_DATABASE = '../MOT16/train/MOT16-10'        \n",
+    "PATH_TO_DATABASE = '../MOT16/train/MOT16-10/'        \n",
     "PATH_TO_IMAGES_DIR = PATH_TO_DATABASE + 'img1/'\n",
     "PATH_TO_ANNOTATIONS_DIR = PATH_TO_DATABASE + '/gt/gt.txt'\n",
     "\n",
@@ -357,12 +436,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# image_np : np array of the image\n",
+    "# prediction : prediction dictionary for the image\n",
+    "# groundtruth : groundtruth dictionary for the image\n",
     "def visualize_image(image_np, prediction=None, groundtruth=None):\n",
-    "    if output_dict != None:\n",
+    "    if prediction != None:\n",
     "        # Plot the prediction\n",
     "        vis_util.visualize_boxes_and_labels_on_image_array(\n",
     "          image_np,\n",
@@ -389,11 +471,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file name with extension\n",
+    "# image_path : file name with extension E.g: 00010.jpg\n",
+    "# prediction : prediction dictionary of the image\n",
     "def drawBB(image_path, prediction):\n",
     "    # Visualization of the results of a detection.\n",
     "    original_image_path = os.path.join(PATH_TO_IMAGES_DIR, image_path)   \n",
@@ -402,8 +485,9 @@
     "\n",
     "    image = Image.open(original_image_path)\n",
     "    image_np = load_image_into_numpy_array(image)\n",
-    "    # Update the image with predicted and grounttruth BB\n",
-    "    visualize_image(image_np, prediction=prediction)\n",
+    "    # Update the image with predicted and groundtruth BB\n",
+    "    visualize_image(image_np, groundtruth=prediction)\n",
+    "    # visualize_image(image_np, prediction=prediction)    \n",
     "    im = Image.fromarray(image_np)\n",
     "    IMAGE_FILE = os.path.join(marked_image_path)\n",
     "    #print \"Save file in\" + IMAGE_FILE\n",
@@ -535,13 +619,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CSV text-file containing one object instance per line. Each line must contain 10 values: \n",
     "# <frame>, <id>, <bb_left>, <bb_top>, <bb_width>, <bb_height>, <conf>, <x>, <y>, <z> \n",
     "# All frame numbers, target IDs and bounding boxes are 1-based\n",
+    "# Frame number is image number without leading 0\n",
+    "# Person ID is <id>\n",
     "\n",
     "def extract_gt():\n",
     "    gt = 0\n",
@@ -549,21 +635,25 @@
     "        reader = csv.reader(csvfile, delimiter=',')\n",
     "        for row in reader:\n",
     "            print ', '.join(row)\n",
-    "            gt = row\n",
-    "            \n",
     "            groundtruth = {}\n",
-    "            gt_bb = []\n",
-    "            gt_bb.append( float(row[0]) ) # ymin\n",
-    "            gt_bb.append( float(row[1]) ) # xmin\n",
-    "            gt_bb.append( float(row[2]) ) # ymax\n",
-    "            gt_bb.append( float(row[3]) ) # xmax\n",
-    "            \n",
     "            gt_bbs = []\n",
+    "            cat_label = []\n",
+    "            \n",
+    "            # For each BB in each image\n",
+    "            gt_bb = []\n",
+    "            gt_bb.append( float(row[3]) + float(row[5])  ) # ymin # bb_top - bb_height\n",
+    "            gt_bb.append( float(row[2]) ) # xmin # bb_left\n",
+    "            gt_bb.append( float(row[3]) ) # ymax # bb_top\n",
+    "            gt_bb.append( float(row[2]) + float(row[4]) ) # xmax # bb_left + bb_width\n",
+    "            \n",
     "            gt_bbs.append(gt_bb)\n",
-    "            groundtruth['groundtruth_boxes'] = np.array(gt_bbs dtype=\"float32\")\n",
-    "            groundtruth['groundtruth_classes'] =\n",
+    "            cat_label.append(str(category_index[1]['name']))\n",
+    "            print cat_label\n",
+    "            groundtruth['filename'] = row[1].zfill(6) + '.jpg'\n",
+    "            groundtruth['groundtruth_boxes'] = np.array(gt_bbs, dtype=\"float32\")\n",
+    "            groundtruth['groundtruth_classes'] = np.array(cat_label)\n",
     "\n",
-    "            return prediction\n",
+    "            return groundtruth\n",
     "    return gt"
    ]
   },
@@ -661,14 +751,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1, 1, 1368, 394, 74, 226, 1, 1, 1\n"
+      "1, 1, 1368, 394, 74, 226, 1, 1, 1\n",
+      "['person']\n"
      ]
     }
    ],
@@ -677,7 +768,8 @@
     "    #run()\n",
     "    #evaluate()\n",
     "    prediction = extract_gt()\n",
-    "    drawBB(image_path, prediction)\n",
+    "    # len 6 .jpg\n",
+    "    drawBB(prediction['filename'], prediction)\n",
     "main()"
    ]
   },
