Split files for predict and evaluate

--- a/person_counter_evaluate.ipynb
+++ b/person_counter_evaluate.ipynb
@@ -187,36 +187,6 @@
     }
    },
    "source": [
-    "## Load a (frozen) Tensorflow model into memory."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "detection_graph = tf.Graph()\n",
-    "with detection_graph.as_default():\n",
-    "  od_graph_def = tf.GraphDef()\n",
-    "  with tf.gfile.GFile(PATH_TO_CKPT, 'rb') as fid:\n",
-    "    serialized_graph = fid.read()\n",
-    "    od_graph_def.ParseFromString(serialized_graph)\n",
-    "    tf.import_graph_def(od_graph_def, name='')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Loading label map\n",
     "Label maps map indices to category names, so that when our convolution network predicts `5`, we know that this corresponds to `airplane`.  Here we use internal utility functions, but anything that returns a dictionary mapping integers to appropriate string labels would be fine"
    ]
@@ -424,78 +394,56 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "# Detection"
+    "## Extract groundtruth from CSV file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "execution_count": 88,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def run_inference_for_single_image(image, graph):\n",
-    "  with graph.as_default():\n",
-    "    with tf.Session() as sess:\n",
-    "      # Get handles to input and output tensors\n",
-    "      ops = tf.get_default_graph().get_operations()\n",
-    "      all_tensor_names = {output.name for op in ops for output in op.outputs}\n",
-    "      tensor_dict = {}\n",
-    "      for key in [\n",
-    "          'num_detections', 'detection_boxes', 'detection_scores',\n",
-    "          'detection_classes', 'detection_masks'\n",
-    "      ]:\n",
-    "        tensor_name = key + ':0'\n",
-    "        if tensor_name in all_tensor_names:\n",
-    "          tensor_dict[key] = tf.get_default_graph().get_tensor_by_name(\n",
-    "              tensor_name)\n",
-    "      if 'detection_masks' in tensor_dict:\n",
-    "        # The following processing is only for single image\n",
-    "        detection_boxes = tf.squeeze(tensor_dict['detection_boxes'], [0])\n",
-    "        detection_masks = tf.squeeze(tensor_dict['detection_masks'], [0])\n",
-    "        # Reframe is required to translate mask from box coordinates to image coordinates and fit the image size.\n",
-    "        real_num_detection = tf.cast(tensor_dict['num_detections'][0], tf.int32)\n",
-    "        detection_boxes = tf.slice(detection_boxes, [0, 0], [real_num_detection, -1])\n",
-    "        detection_masks = tf.slice(detection_masks, [0, 0, 0], [real_num_detection, -1, -1])\n",
-    "        detection_masks_reframed = utils_ops.reframe_box_masks_to_image_masks(\n",
-    "            detection_masks, detection_boxes, image.shape[0], image.shape[1])\n",
-    "        detection_masks_reframed = tf.cast(\n",
-    "            tf.greater(detection_masks_reframed, 0.5), tf.uint8)\n",
-    "        # Follow the convention by adding back the batch dimension\n",
-    "        tensor_dict['detection_masks'] = tf.expand_dims(\n",
-    "            detection_masks_reframed, 0)\n",
-    "      image_tensor = tf.get_default_graph().get_tensor_by_name('image_tensor:0')\n",
-    "        \n",
-    "      # Run inference\n",
-    "      output_dict = sess.run(tensor_dict,\n",
-    "                             feed_dict={image_tensor: np.expand_dims(image, 0)})\n",
-    " \n",
-    "      # all outputs are float32 numpy arrays, so convert types as appropriate\n",
-    "      output_dict['num_detections'] = int(output_dict['num_detections'][0])\n",
-    "      output_dict['detection_classes'] = output_dict[\n",
-    "          'detection_classes'][0].astype(np.uint8)\n",
-    "      output_dict['detection_boxes'] = output_dict['detection_boxes'][0]\n",
-    "      output_dict['detection_scores'] = output_dict['detection_scores'][0]\n",
-    "      if 'detection_masks' in output_dict:\n",
-    "        output_dict['detection_masks'] = output_dict['detection_masks'][0]\n",
-    "      # Need to include only the ones with confidence > threshold\n",
-    "  return output_dict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Extract groundtruth from CSV file"
+    "def extract_gt_for_single_image(image_id):\n",
+    "    annotation_path = os.path.join(PATH_TO_TEST_ANNOTATIONS_DIR, '{}.xml'.format(image_id))\n",
+    "    \n",
+    "    tree = ET.parse(annotation_path)\n",
+    "    root = tree.getroot()\n",
+    "\n",
+    "    groundtruth_dict = {}\n",
+    "    gt_bbs = []\n",
+    "    cat_id = []\n",
+    "    cat_label = []\n",
+    "    \n",
+    "    for object_node in root.iterfind('object'):\n",
+    "        # Extract boundary box from XML files\n",
+    "        for bb in object_node.iterfind('bndbox'):\n",
+    "            gt_bb = []\n",
+    "            for val in ['ymin', 'xmin', 'ymax', 'xmax']:\n",
+    "                gt_bb.append(float(bb.find(val).text))\n",
+    "            gt_bbs.append(gt_bb)\n",
+    "\n",
+    "        # Extract ground truth category\n",
+    "        child = object_node.find('name')\n",
+    "        cat_label.append(child.text)\n",
+    "        # Hardcoded as of now :/\n",
+    "        if child.text == 'cow':\n",
+    "            cat_id.append(21)\n",
+    "        elif child.text == 'dog':\n",
+    "            cat_id.append(18)\n",
+    "        # print(child.text)\n",
+    "\n",
+    "    # Extract size\n",
+    "    groundtruth_dict['size'] = [int(root.find('size/width').text), int(root.find('size/height').text)]\n",
+    "    # Dog is category 18 / Todo update\n",
+    "    groundtruth_dict['num_detections'] = len(gt_bbs)\n",
+    "    groundtruth_dict['original_boxes'] = gt_bbs\n",
+    "    groundtruth_dict['groundtruth_boxes'] = np.array(gt_bbs, dtype=\"float32\")\n",
+    "    groundtruth_dict['groundtruth_classes'] = np.array(cat_id) # np.full([len(gt_bbs)], 18)\n",
+    "    groundtruth_dict['groundtruth_class_labels'] = np.array(cat_label) # np.full([len(gt_bbs)], 'dog')\n",
+    "    \n",
+    "    return groundtruth_dict"
    ]
   },
   {
@@ -509,8 +457,6 @@
     "# All frame numbers, target IDs and bounding boxes are 1-based\n",
     "# Frame number is image number without leading 0\n",
     "# Person ID is <id>\n",
-    "\n",
-    "# Also include size, num detections as len of gt_bbs,\n",
     "\n",
     "def extract_gt():\n",
     "    gt = 0\n",
@@ -544,44 +490,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Forward Pass\n",
-    "Evaluate the prediction using Tensorflow evaluation function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ev_data = {}\n",
-    "\n",
-    "def forward_pass():\n",
-    "    for image_path in os.listdir(PATH_TO_IMAGES_DIR):       \n",
-    "        try:\n",
-    "            # image_id : filename without extension\n",
-    "            image_id = os.path.splitext(os.path.basename(image_path))[0]\n",
-    "            image_path = os.path.join(PATH_TO_IMAGES_DIR, image_path)\n",
-    "            image = Image.open(image_path)\n",
-    "            # the array based representation of the image will be used later in order to prepare the\n",
-    "            # result image with boxes and labels on it.\n",
-    "            image_np = load_image_into_numpy_array(image)\n",
-    "            # Expand dimensions since the model expects images to have shape: [1, None, None, 3]\n",
-    "            image_np_expanded = np.expand_dims(image_np, axis=0)\n",
-    "\n",
-    "            # Actual detection.\n",
-    "            output_dict = run_inference_for_single_image(image_np, detection_graph)\n",
-    "\n",
-    "            # The predicition gives BB in normalized coordinated\n",
-    "            # Convert to original image cordinates from normalized coordinates (for evaluation and vizualization)\n",
-    "            output_dict['detection_boxes'] = denormalise_box(output_dict['detection_boxes'], image.size)\n",
-    "            \n",
-    "            ev_data[image_id] = output_dict\n",
-    "            print image_id, \"Detected\", output_dict['num_detections']\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            print(image_id, 'Error', e)\n",
-    "            continue"
+    "# Matching algo\n",
+    "Find the "
    ]
   },
   {
@@ -601,12 +511,36 @@
     "def run():\n",
     "    start_time = time.clock()\n",
     "    print \"Forward pass for \", PATH_TO_IMAGES_DIR\n",
+    "    #gt = extract_gt()\n",
     "    forward_pass()\n",
     "\n",
     "    # Save model prediction\n",
     "    with open(PREDICTION_PKL_FILE,'wb') as fd:\n",
     "        pickle.dump(ev_data, fd)\n",
     "        print(\"\\n\", time.clock() - start_time, \"seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate the prediction\n",
+    "def evaluate():\n",
+    "    print(PREDICTION_PKL_FILE)\n",
+    "    with open(PREDICTION_PKL_FILE,'rb') as fd:\n",
+    "        ev_data = pickle.load(fd)\n",
+    "        #for image_path in os.listdir(PATH_TO_TEST_IMAGES_DIR):\n",
+    "            #image_id = os.path.splitext(os.path.basename(image_path))[0]\n",
+    "        # Need to sequentially analyse\n",
+    "        for i in range(1,655):\n",
+    "            # File name without extension\n",
+    "            image_id = str(i).zfill(6)\n",
+    "            prediction = ev_data[image_id]\n",
+    "            # Plot the BB on image\n",
+    "            # drawBB(image_path, prediction)\n",
+    "    print \"Done\""
    ]
   },
   {
@@ -625,6 +559,7 @@
    "source": [
     "def main():\n",
     "    #run()\n",
+    "    #evaluate()\n",
     "    print \"Done\"\n",
     "main()"
    ]
