--- a/person_counter_evaluate.ipynb
+++ b/person_counter_evaluate.ipynb
@@ -741,7 +741,7 @@
     "    nms_iou_threshold = 1.0\n",
     "    nms_max_output_boxes = 10000\n",
     "\n",
-    "    pie = img_eval_util.PerImageEvaluation(num_groundtruth_classes, matching_iou_threshold, nms_iou_threshold,nms_max_output_boxes)\n",
+    "    pie = pc_utils.pc_PerImageEvaluation(num_groundtruth_classes, matching_iou_threshold, nms_iou_threshold,nms_max_output_boxes)\n",
     "\n",
     "    # First frame\n",
     "    i = 1\n",
@@ -766,9 +766,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<object_detection.utils.np_box_list.BoxList object at 0x7fe485181dd0>\n",
+      "[[0. 0. 1. 1.]\n",
+      " [0. 0. 2. 2.]\n",
+      " [0. 0. 3. 3.]]\n",
+      "[0.6 0.8 0.5]\n",
+      "[[0. 0. 2. 2.]\n",
+      " [0. 0. 1. 1.]\n",
+      " [0. 0. 3. 3.]]\n",
+      "[0.8 0.6 0.5]\n"
+     ]
+    }
+   ],
    "source": [
     "from object_detection.utils import np_box_list\n",
     "from object_detection.utils import np_box_list_ops\n",
@@ -777,16 +793,19 @@
     "print detected_boxlist\n",
     "detected_boxlist.add_field('scores', detected_scores)\n",
     "\n",
-    "#detected_boxlist = np_box_list_ops.non_max_suppression(detected_boxlist, pie.nms_max_output_boxes, pie.nms_iou_threshold)\n",
     "print detected_boxlist.get()\n",
     "print detected_scores\n",
+    "detected_boxlist = np_box_list_ops.non_max_suppression(detected_boxlist, pie.nms_max_output_boxes, pie.nms_iou_threshold)\n",
+    "\n",
+    "print detected_boxlist.get()\n",
+    "print detected_boxlist.get_field('scores')\n",
     "\n",
     "# After sort\n",
-    "print \"After sort\"\n",
-    "boxlist = np_box_list_ops.sort_by_field(detected_boxlist, 'scores')\n",
-    "print boxlist.get()\n",
-    "scores = boxlist.get_field('scores')\n",
-    "print scores\n"
+    "# print \"After sort\"\n",
+    "# boxlist = np_box_list_ops.sort_by_field(detected_boxlist, 'scores')\n",
+    "# print boxlist.get()\n",
+    "# scores = boxlist.get_field('scores')\n",
+    "# print scores\n"
    ]
   },
   {
