--- a/person_counter_evaluate.ipynb
+++ b/person_counter_evaluate.ipynb
@@ -192,8 +192,7 @@
     "import pc_utils\n",
     "sys.path.append(\"../obj_det/\")\n",
     "from utils import label_map_util\n",
-    "from utils import visualization_utils as vis_util\n",
-    "#from utils import per_image_evaluation as img_eval_util"
+    "from utils import visualization_utils as vis_util"
    ]
   },
   {
@@ -601,132 +600,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \"\"\"\n",
-    "# Given two frames, match the detection to groundtruth.\n",
-    "# In decreasing sorted order, assign the GT if IoU > IoU threshold\n",
-    "# Filter detection score < score threshold\n",
-    "\n",
-    "#     Args:\n",
-    "#       detected_boxes: A numpy array of shape [N, 4] representing detected box coordinates\n",
-    "#       detected_scores: A 1-d numpy array of length N representing classification score\n",
-    "#       groundtruth_boxes: A numpy array of shape [M, 4] representing ground truth box coordinates\n",
-    "\n",
-    "#     Returns:\n",
-    "#       scores: A numpy array representing the detection scores, sorted and filtered.\n",
-    "#       max_overlap_gt_ids: A numpy array indicating the detection's corresponding groundtruth box\n",
-    "#       tp_fp_labels: a boolean numpy array indicating whether a detection is a true positive.\n",
-    "#       is_gt_box_detected: Indicates if a ground truth box is detected \n",
-    "# \"\"\"\n",
-    "# def matchOnIoU(pie, detected_boxes, detected_scores, groundtruth_boxes):\n",
-    "#     # Default value false\n",
-    "#     num_groundtruth_boxes = np.shape(groundtruth_boxes)[0]\n",
-    "#     groundtruth_is_group_of_list = np.zeros(num_groundtruth_boxes, dtype=bool)\n",
-    "\n",
-    "#     # Compute IoU for every detection and groundtruth pair\n",
-    "#     # Detection with score < score threshold are ignored. Rest are sorted.\n",
-    "#     (iou, _, scores, num_detected_boxes) = pie._get_overlaps_and_scores_box_mode(\n",
-    "#                detected_boxes=detected_boxes,\n",
-    "#                detected_scores=detected_scores,\n",
-    "#                groundtruth_boxes=groundtruth_boxes,\n",
-    "#                groundtruth_is_group_of_list=groundtruth_is_group_of_list)\n",
-    "    \n",
-    "#     # If no GT value then all detection are false positive\n",
-    "#     if groundtruth_boxes.size == 0:\n",
-    "#         #return scores, np.zeros(num_detected_boxes, dtype=bool)\n",
-    "#         print \"No ground truth, All FP\"\n",
-    "#         return\n",
-    "    \n",
-    "#     # Is ith detection a True positive\n",
-    "#     tp_fp_labels = np.zeros(num_detected_boxes, dtype=bool)\n",
-    "\n",
-    "#     # Tp-fp evaluation for non-group of boxes (if any).\n",
-    "#     if iou.shape[1] > 0:\n",
-    "#         # For each detection, the best matched GT \n",
-    "#         max_overlap_gt_ids = np.argmax(iou, axis=1)\n",
-    "#         is_gt_box_detected = np.zeros(iou.shape[1], dtype=bool)\n",
-    "#         for i in range(num_detected_boxes):\n",
-    "#             gt_id = max_overlap_gt_ids[i]\n",
-    "#             if iou[i, gt_id] >= pie.matching_iou_threshold and not is_gt_box_detected[gt_id]:\n",
-    "#                 tp_fp_labels[i] = True\n",
-    "#                 is_gt_box_detected[gt_id] = True\n",
-    "\n",
-    "#     # Detection matched to\n",
-    "#     for i in range(num_detected_boxes):\n",
-    "#         print \"Dt\", scores[i], \"GT\", max_overlap_gt_ids[i], \"\", tp_fp_labels[i]\n",
-    "#     for i in range(num_groundtruth_boxes):\n",
-    "#         print \"GT\", i, bool(is_gt_box_detected[i])\n",
-    "    \n",
-    "\n",
-    "#     return scores, max_overlap_gt_ids, tp_fp_labels, is_gt_box_detected "
+    "PERSON_COUNTER = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Match objects between two frames and tag id to new objects\n",
     "def twoFrameMatching(pie, dt, gt):\n",
-    "    matchOnIoU(pie, dt['detection_boxes'], dt['detected_scores'], gt['groundtruth_boxes'])\n",
+    "    dt = pc_utils.matchOnIoU(pie, dt, gt)\n",
     "    # Assign id to unassigned detections\n",
+    "    for i in range(dt['num_detections']):\n",
+    "        if dt['person_id'][i] == -1:\n",
+    "            global PERSON_COUNTER\n",
+    "            PERSON_COUNTER += 1\n",
+    "            dt['person_id'][i] = PERSON_COUNTER\n",
     "    return dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dt 0.8 GT 0  False\n",
-      "Dt 0.6 GT 0  True\n",
-      "Dt 0.5 GT 0  False\n",
-      "GT 0 True\n",
-      "GT 1 False\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([0.8, 0.6, 0.5]),\n",
-       " array([0, 0, 0]),\n",
-       " array([False,  True, False]),\n",
-       " array([ True, False]))"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_groundtruth_classes = 1\n",
-    "matching_iou_threshold = 0.5\n",
-    "nms_iou_threshold = 1.0\n",
-    "nms_max_output_boxes = 10000\n",
+    "# num_groundtruth_classes = 1\n",
+    "# matching_iou_threshold = 0.5\n",
+    "# nms_iou_threshold = 1.0\n",
+    "# nms_max_output_boxes = 10000\n",
     "\n",
-    "# Per image evaluation\n",
-    "pie = pc_utils.pc_PerImageEvaluation(num_groundtruth_classes, matching_iou_threshold, nms_iou_threshold,nms_max_output_boxes)\n",
+    "# # Per image evaluation\n",
+    "# pie = pc_utils.pc_PerImageEvaluation(num_groundtruth_classes, matching_iou_threshold, nms_iou_threshold,nms_max_output_boxes)\n",
     "\n",
-    "# Dataset\n",
-    "detected_boxes = np.array([[0, 0, 1, 1], [0, 0, 2, 2], [0, 0, 3, 3]], dtype=float)\n",
-    "detected_scores = np.array([0.6, 0.8, 0.5], dtype=float) # Original\n",
+    "# # Dataset\n",
+    "# detected_boxes = np.array([[0, 0, 1, 1], [0, 0, 2, 2], [0, 0, 3, 3]], dtype=float)\n",
+    "# detected_scores = np.array([0.6, 0.8, 0.5], dtype=float) # Original\n",
+    "# dt = {}\n",
+    "# dt['detection_boxes'] = detected_boxes\n",
+    "# dt['detection_scores'] = detected_scores\n",
     "\n",
-    "groundtruth_boxes = np.array([[0, 0, 1, 1], [0, 0, 10, 10]], dtype=float)\n",
-    "pc_utils.matchOnIoU(pie, detected_boxes, detected_scores, groundtruth_boxes)\n",
-    "#twoFrameMatching(pie, detected_boxes, detected_scores, groundtruth_boxes)"
+    "# groundtruth_boxes = np.array([[0, 0, 1, 1], [0, 0, 10, 10]], dtype=float)\n",
+    "# gt = {}\n",
+    "# gt['detection_boxes'] = groundtruth_boxes\n",
+    "# gt['person_id'] = np.array([1,2,3])\n",
+    "# PERSON_COUNTER = 3\n",
+    "\n",
+    "# #pc_utils.matchOnIoU(pie, dt, gt)\n",
+    "# #twoFrameMatching(pie, dt, gt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +681,8 @@
     "    gt = ev_data[image_id] # treated as gt\n",
     "\n",
     "    # Initialize the person counter\n",
-    "    person_counter = 0\n",
+    "    global PERSON_COUNTER\n",
+    "    PERSON_COUNTER = 0\n",
     "    gt['person_id'] = np.array([i+1 for i in range(gt['num_detections'])])\n",
     "\n",
     "    image_id = str(i+1).zfill(6)\n",
@@ -761,44 +694,29 @@
     "        # Prepare next loop\n",
     "        i = i + 1\n",
     "        image_id = str(i+1).zfill(6)\n",
-    "        dt = ev_data[image_id]\n"
+    "        dt = ev_data[image_id]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<object_detection.utils.np_box_list.BoxList object at 0x7fe485181dd0>\n",
-      "[[0. 0. 1. 1.]\n",
-      " [0. 0. 2. 2.]\n",
-      " [0. 0. 3. 3.]]\n",
-      "[0.6 0.8 0.5]\n",
-      "[[0. 0. 2. 2.]\n",
-      " [0. 0. 1. 1.]\n",
-      " [0. 0. 3. 3.]]\n",
-      "[0.8 0.6 0.5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from object_detection.utils import np_box_list\n",
-    "from object_detection.utils import np_box_list_ops\n",
+    "# from object_detection.utils import np_box_list\n",
+    "# from object_detection.utils import np_box_list_ops\n",
     "\n",
-    "detected_boxlist = np_box_list.BoxList(detected_boxes)\n",
-    "print detected_boxlist\n",
-    "detected_boxlist.add_field('scores', detected_scores)\n",
+    "# detected_boxlist = np_box_list.BoxList(detected_boxes)\n",
+    "# print detected_boxlist\n",
+    "# detected_boxlist.add_field('scores', detected_scores)\n",
     "\n",
-    "print detected_boxlist.get()\n",
-    "print detected_scores\n",
-    "detected_boxlist = np_box_list_ops.non_max_suppression(detected_boxlist, pie.nms_max_output_boxes, pie.nms_iou_threshold)\n",
+    "# print detected_boxlist.get()\n",
+    "# print detected_scores\n",
+    "# detected_boxlist = np_box_list_ops.non_max_suppression(detected_boxlist, pie.nms_max_output_boxes, pie.nms_iou_threshold)\n",
     "\n",
-    "print detected_boxlist.get()\n",
-    "print detected_boxlist.get_field('scores')\n",
+    "# print detected_boxlist.get()\n",
+    "# print detected_boxlist.get_field('scores')\n",
     "\n",
     "# After sort\n",
     "# print \"After sort\"\n",
